# book_agentic_patterns

./: .env_example  .gitignore  CLAUDE.md  README.md  TO_DO.md  aixtools  apis.yaml  chapters.md  config_example.yaml  dbs.yaml  llms-full.txt  pyproject.toml  references.md  title_page.md  topics.md  users.json  vocabularies.yaml
.chainlit/: config.toml
agentic_patterns/01_foundations/: example_01.ipynb  example_02_translate.ipynb  example_03_multi_turn.ipynb  example_translate_basic.ipynb  example_translate_system_prompt.ipynb
agentic_patterns/02_core_patterns/: example_02_self_reflection.ipynb  example_human_in_the_loop.ipynb  example_planning_decomposition.ipynb  example_react.ipynb  example_self_reflection.ipynb  example_tree_of_thought.ipynb
agentic_patterns/03_tools/: example_structured_outputs.ipynb  example_tool_permissions.ipynb  example_tool_selection.ipynb  example_tools.ipynb  example_workspace.ipynb
agentic_patterns/04_orchestration/: example_graph.ipynb  example_handoff.ipynb  example_workflow.ipynb
agentic_patterns/05_code_execution/: example_codeact.ipynb
agentic_patterns/08_mcp/: example_agent_mcp_client_http.ipynb  example_agent_mcp_client_stdio.ipynb  example_mcp_features.ipynb  example_mcp_server.py  (+3 more)
docs/: a2a_requirements.md  a2a_specification.md  agentic_patterns.md  agui.md  design_context_management_architecture.md  design_csv_connector.md  design_json_connector.md  design_mcp_sql.md  design_mcp_template.md  fastmcp.md  mcp.md  mcp_repl.md  mcp_requirements.md  openapi_connector_usage.md  plan_a2a_implementation.md  plan_agents.md  plan_agui_frontend.md  plan_agui_refactor.md  plan_config_yaml.md  plan_connector_refactor.md  plan_context_management_implementation.md  plan_docs.md  plan_doctors_implementation.md  plan_event_driven_wait.md  plan_format_converter.md  plan_infrastructure.md  plan_mcp.md  plan_mcp_data_analysis.md  plan_mcp_sandbox.md  plan_monolithic_agents.md  plan_openapi.md  plan_orchestration_tasks.md  plan_private_data.md  plan_repl.md  plan_repl_improvements.md  plan_sandbox_lifecycle.md  plan_session_propagation.md  plan_skills.md  plan_sql_connector_nl2sql.md  plan_sub_agents.md  (+8 more)
output/: 03_core_patterns.md  04_tools.md  book.md
scripts/: annotate_schema.sh  build_repl_image.sh  clean_notebooks.py  clean_notebooks.sh  config.sh  db_ingest_bookstore_sqlite.sh  download_vocabularies.sh  evals.sh  fix_headings.py  fix_references.py  ingest_openapi.sh  launch_infrastructure.sh  lint.sh  llms_txt.sh  make.py  make.sh  release.sh  test.sh  test_integration.sh  test_unit.sh
tests/: test_config_env.py  test_config_utils.py  test_context_decorators.py  test_context_history.py  test_context_reader.py  test_load_models.py  test_models_get.py  test_prompt.py  test_testing_agent_mock.py  test_testing_model_mock.py  test_testing_tool_mock.py  test_tools_selection.py  test_utils.py  test_vectordb_config.py
(+1211 files in other folders)
