[project]
name = "book-agentic-patterns"
version = "0.1.0"
description = "Agentic patterns"
readme = "README.md"
requires-python = ">=3.12.2"
dependencies = [
    "chromadb>=1.4.1",
    "dotenv>=0.9.9",
    "fasta2a>=0.6.0",
    "fastmcp>=2.14.2",
    "ipykernel>=7.1.0",
    "openai>=2.14.0",
    "pydantic-ai>=1.39.0",
    "pyyaml>=6.0.0",
]

[tool.setuptools]
packages = ["agentic_patterns"]
