[project]
name = "book-agentic-patterns"
version = "0.1.0"
description = "Agentic patterns"
readme = "README.md"
requires-python = ">=3.12.2"
dependencies = [
    "aiosqlite>=0.21.0",
    "chainlit>=2.9.6",
    "chromadb>=1.4.1",
    "docker>=7.0.0",
    "dotenv>=0.9.9",
    "fasta2a>=0.6.0",
    "fastapi>=0.128.0",
    "fastmcp>=2.14.2",
    "greenlet>=3.3.1",
    "ipykernel>=7.1.0",
    "jsonpath-ng>=1.7.0",
    "openpyxl>=3.1.0",
    "openai>=2.14.0",
    "pyjwt>=2.9.0",
    "pandas>=3.0.0",
    "pydantic-ai[ag-ui]>=1.39.0",
    "pymupdf>=1.25.0",
    "pypandoc>=1.14",
    "python-docx>=1.1.0",
    "python-pptx>=1.0.0",
    "pyyaml>=6.0.0",
    "requests>=2.32.0",
    "scikit-learn>=1.6.0",
    "scipy>=1.15.0",
    "sqlalchemy>=2.0.0",
    "statsmodels>=0.14.0",
    "matplotlib>=3.10.8",
    "seaborn>=0.13.2",
    "ruff>=0.15.0",
    "weasyprint>=68.1",
    "nbconvert>=7.17.0",
]

[project.scripts]
annotate-schema = "agentic_patterns.core.connectors.sql.cli.annotate_schema:main_sync"
manage-users = "agentic_patterns.core.ui.cli:main"
doctors = "agentic_patterns.core.doctors.__main__:main_sync"
evals = "agentic_patterns.core.evals.__main__:main_sync"
ingest-openapi = "agentic_patterns.core.connectors.openapi.cli.ingest:main_sync"

[tool.ruff.lint.per-file-ignores]
"*.ipynb" = ["E402"]

[tool.uv]
package = true

[tool.setuptools]
packages = ["agentic_patterns"]
